# hugginglens

./: README.md  demo.ipynb  pyproject.toml  requirements.txt
hugginglens/: __init__.py  hook_points.py  hooked_transformer.py
lens/: __init__.py  hook_points.py  hooked_transformer.py  utils.py
tests/: test_hooked_transformer.py
